[package]
name = "runt"
version = "0.1.0"
exclude = [".vscode/*"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
crossterm = "0.20.0"
scopeguard = "1.1.0"
tui = { version="0.15", default-features=false, features=['crossterm', 'serde'] }
unicode-width = "0.1.8"
